// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ssr translations > should render en 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="en-translations"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/en-translations.js"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello sku
        Company name
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [1]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["en-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="en-translations"
      src="http://127.0.0.1:8313/en-translations.js"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr translations > should render en-PSEUDO 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="en-PSEUDO-translations"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/en-PSEUDO-translations.js"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        [Ḩẽẽẽƚƚööö šķǚǚǚ]
        [Çööm̂ƥăăกี้ýý กี้ăăm̂ẽẽ]
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["en-PSEUDO-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="en-PSEUDO-translations"
      src="http://127.0.0.1:8313/en-PSEUDO-translations.js"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr translations > should render fr 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="fr-translations"
      rel="preload"
      as="script"
      href="http://127.0.0.1:8313/fr-translations.js"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Bonjour sku
        บริษัท
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["fr-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/runtime.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/5.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://127.0.0.1:8313/main.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="fr-translations"
      src="http://127.0.0.1:8313/fr-translations.js"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: NO DIFF
`;
